--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.2",
     "formidable": "^1.2.2",
     "gravatar": "^1.8.1",
+    "jimp": "^0.16.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
